# ozz-land

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/shaders/: simple.frag  simple.vert
app/src/: application.cpp  application.h  camera_object.cpp  camera_object.h  cube.cpp  cube.h  graphics_includes.h  main.cpp  swapchain_image.h  transform_component.h  utils.h
ozz_vulkan/: CMakeLists.txt
ozz_vulkan/include/ozz_vulkan/: renderer.h  vk_utils.h
ozz_vulkan/src/: renderer.cpp
ozz_vulkanxr/: CMakeLists.txt
ozz_vulkanxr/include/ozz_vulkan/: renderer.h  vk_utils.h  xr_utils.h
ozz_vulkanxr/include/ozz_vulkan/brushes/: shapes.h
ozz_vulkanxr/include/ozz_vulkan/internal/: frame_command_buffer_cache.h  graphics_includes.h  swapchain_image.h  vk_utils.h  xr_types.h  xr_utils.h
ozz_vulkanxr/include/ozz_vulkan/resources/: buffer.h  push_constants.h  shader.h  types.h
ozz_vulkanxr/src/: buffer.cpp  renderer.cpp  scratch.cpp  shader.cpp  vma_implementation.cpp
